# tachyon

tachyon/c/zk/plonk/constraint_system/: bn254_constraint_system.h  bn254_constraint_system_unittest.cc
tachyon/c/zk/plonk/keys/: bn254_plonk_proving_key.h  bn254_plonk_verifying_key.h
tachyon/crypto/commitments/: polynomial_openings.h  polynomial_openings_unittest.cc
tachyon/crypto/commitments/kzg/: BUILD.bazel  shplonk.h  shplonk_unittest.cc
tachyon/math/base/: semigroups.h
tachyon/math/elliptic_curves/bn/bn254/: BUILD.bazel
tachyon/math/elliptic_curves/pairing/: pairing.h  pairing_unittest.cc
tachyon/zk/base/: BUILD.bazel  value.h
tachyon/zk/expressions/: advice_expression_unittest.cc  expression_unittest.cc  fixed_expression_unittest.cc  instance_expression_unittest.cc
tachyon/zk/expressions/evaluator/: selector_replacer_unittest.cc  simple_evaluator_unittest.cc  simple_selector_extractor_unittest.cc  simple_selector_finder_unittest.cc
tachyon/zk/lookup/: lookup_argument_runner_impl.h  lookup_argument_runner_unittest.cc  lookup_verification.h
tachyon/zk/plonk/circuit/: BUILD.bazel
tachyon/zk/plonk/circuit/examples/: BUILD.bazel  fibonacci1_circuit.h  fibonacci1_circuit_unittest.cc  fibonacci1_v1_circuit_unittest.cc  fibonacci2_circuit.h  fibonacci2_circuit_unittest.cc  fibonacci2_v1_circuit_unittest.cc  fibonacci3_circuit.h  fibonacci3_circuit_unittest.cc  fibonacci3_v1_circuit_unittest.cc  fibonacci4_circuit.h  is_zero_chip.h  simple_circuit.h  simple_circuit_unittest.cc  simple_lookup_circuit.h  simple_lookup_circuit_unittest.cc  simple_lookup_v1_circuit_unittest.cc  simple_v1_circuit_unittest.cc
tachyon/zk/plonk/circuit/examples/test/: BUILD.bazel  simple_circuit_data.h  simple_circuit_data.json  simple_circuit_data_unittest.cc  test.json
tachyon/zk/plonk/circuit/floor_planner/v1/: v1_floor_planner.h
tachyon/zk/plonk/constraint_system/: constraint_system.h  query.h  rotation.h  rotation_unittest.cc  virtual_cell.h
tachyon/zk/plonk/examples/: BUILD.bazel  simple_circuit_unittest.cc  simple_lookup_circuit_unittest.cc  simple_lookup_v1_circuit_unittest.cc  simple_v1_circuit_unittest.cc
tachyon/zk/plonk/halo2/: BUILD.bazel  argument_util.h  proof.h  prover_test.h  synthesizer.h  verifier.h  witness_collection.h
tachyon/zk/plonk/keys/: assembly.h  key.h
tachyon/zk/plonk/layout/floor_planner/v1/: measurement_pass.h  v1_floor_planner.h  v1_strategy.h
tachyon/zk/plonk/permutation/: grand_product_argument.h  permutation_argument_runner.h  permutation_argument_runner_impl.h  permutation_argument_unittest.cc  permutation_assembly.h  permutation_assembly_unittest.cc  permutation_verification.h
tachyon/zk/plonk/vanishing/: calculation.h  circuit_polynomial_builder.h  evaluation_input.h  graph_evaluator.h  graph_evaluator_unittest.cc  prover_vanishing_argument.h  value_source.h  vanishing_argument.h  vanishing_argument_unittest.cc  vanishing_committed.h  vanishing_constructed.h  vanishing_evaluated.h  vanishing_partially_evaluated.h
tachyon/zk/r1cs/: BUILD.bazel  quadratic_arithmetic_program.h
tachyon/zk/r1cs/groth16/: BUILD.bazel  proof.h  prove.h  proving_key.h  toxic_waste.h  verify.h  verifying_key.h
vendors/halo2/: BUILD.bazel
vendors/halo2/src/: bn254_shplonk_proving_key.cc  buffer_reader.h  prover_impl.h  shplonk_proving_key_impl.h
