load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cc_unittest")

package(default_visibility = ["//visibility:public"])

tachyon_cc_library(
    name = "simple_circuit_data",
    hdrs = ["simple_circuit_data.h"],
    deps = ["//tachyon/base/json"],
)

tachyon_cc_unittest(
    name = "simple_circuit_data_unittests",
    srcs = ["simple_circuit_data_unittest.cc"],
    deps = [
        ":simple_circuit_data",
        "//tachyon/zk/plonk/circuit/examples:circuit_test",
    ],
)
